test correction overflow gauche

--- a/css/style.css
+++ b/css/style.css
@@ -500,12 +500,13 @@ div a {
 }
 
 @media (max-width: 768px) {
-
+  body, html {
+    overflow-x: hidden;
+    }
   body {  
     width: 375px;
     max-width: 98%;
     margin: auto;
-    overflow-x: hidden;
   }
 
   .logo_div {
@@ -551,7 +552,6 @@ a#nav_activ:active {
   .description_site {
     margin-top: 31px;
     margin-left: 20px;
-    margin-right: 20px;
   }
 
   .description_supplementaire {
